src/parser/snapshots/miniml__parser__tests__parse_list.snap
---
source: src/parser/tests.rs
expression: "tree.expect(\"Tree is empty\")"
---
Expr(
    List(
        [
            Lit(
                Int(
                    1,
                ),
            ),
            Lit(
                Int(
                    2,
                ),
            ),
            Lit(
                Int(
                    3,
                ),
            ),
        ],
    ),
)
