src/parser/snapshots/miniml__parser__tests__parse_lss.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Infix {
        op: Lss,
        lhs: Lit(
            Int(
                Int {
                    value: 1,
                    radix: Dec,
                },
            ),
        ),
        rhs: Infix {
            op: Add,
            lhs: Lit(
                Int(
                    Int {
                        value: 2,
                        radix: Dec,
                    },
                ),
            ),
            rhs: Ident(
                InternedString(x),
            ),
        },
    },
)
