src/parser/snapshots/miniml__parser__tests__parse_octal.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Lit(
        Int(
            Int {
                value: 493,
                radix: Oct,
            },
        ),
    ),
)
