src/parser/snapshots/miniml__parser__tests__parse_rational.snap
---
source: src/parser/tests.rs
expression: "tree.expect(\"Tree is empty\")"
---
Expr(
    Lit(
        Rational(
            Ratio {
                numer: 5,
                denom: 23,
            },
        ),
    ),
)
