src/parser/snapshots/miniml__parser__tests__parse_string.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Lit(
        String(
            InternedString(Hello, World!),
        ),
    ),
)
