src/parser/snapshots/miniml__parser__tests__parse_struct_def.snap
---
source: src/parser/tests.rs
expression: ast
---
Struct(
    StructDef {
        name: InternedString(Point),
        fields: [
            InternedString(x),
            InternedString(y),
        ],
    },
)
