src/parser/snapshots/miniml__parser__tests__parse_tuple.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Lit(
        Tuple(
            Tuple {
                items: [
                    Lit(
                        Int(
                            Int {
                                value: 1,
                                radix: Dec,
                            },
                        ),
                    ),
                    Lit(
                        Int(
                            Int {
                                value: 2,
                                radix: Dec,
                            },
                        ),
                    ),
                    Lit(
                        Int(
                            Int {
                                value: 3,
                                radix: Dec,
                            },
                        ),
                    ),
                ],
            },
        ),
    ),
)
