src/parser/snapshots/miniml__parser__tests__parse_unary.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Prefix {
        op: Neg,
        expr: Apply(
            Apply(
                Ident(
                    InternedString(f),
                ),
                Ident(
                    InternedString(x),
                ),
            ),
            Ident(
                InternedString(y),
            ),
        ),
    },
)
